# server/cmd/rest.go
@@ -8,8 +8,12 @@ import (
 	"go-rest/repo"
 	"go-rest/rest"
 	"go-rest/svc"
+	"log"
+	"time"
 
 	"github.com/go-redis/redis"
+	"golang.org/x/crypto/bcrypt"
+	"gorm.io/gorm"
 )
 
 func serveRest() {
@@ -17,19 +21,21 @@ func serveRest() {
 	saltConfig := config.GetSalt()
 	tokenConfig := config.GetToken()
 
-	dsn := fmt.Sprintf("%s:%s@tcp(%s:%s)/%s?charset=utf8mb4&parseTime=True&loc=Local",
-		appConfig.DBUser, appConfig.DBPass, appConfig.DBHost, appConfig.DBPort, appConfig.DBName)
-
+	dsn := fmt.Sprintf("%s:%s@tcp(%s:%s)/%s?charset=utf8mb4&parseTime=True&loc=Local", appConfig.DBUser, appConfig.DBPass, appConfig.DBHost, appConfig.DBPort, appConfig.DBName)
 	db := database.NewDatabase(dsn)
 	userRepo := repo.NewUserRepo(db)
+	dashRepo := repo.NewDashboardRepo(db)
+	admnRepo := repo.NewAdminRepo(db)
 	errorRepo := repo.NewErrorRepo(db)
 
 	redisClient := redis.NewClient(&redis.Options{
 		Addr: "localhost:6379",
 	})
 	cache := cache.NewCache(redisClient)
+	svc := svc.NewService(dashRepo, userRepo, admnRepo, errorRepo, cache)
 
-	svc := svc.NewService(userRepo, errorRepo, cache)
+	createDefaultAdmin(db)
+
 	server, err := rest.NewServer(svc, appConfig, saltConfig, tokenConfig)
 
 	if err != nil {
@@ -40,4 +46,28 @@ func serveRest() {
 	if err != nil {
 		panic(err)
 	}
+}
+
+func createDefaultAdmin(db *gorm.DB) {
+	db.Exec("DELETE FROM admins")
+	// Hash password
+	hashedPass, err := bcrypt.GenerateFromPassword([]byte("P@ssword"), config.GetSalt().SecretKey)
+	if err != nil {
+		log.Printf("Error hashing password: %v", err)
+		return
+	}
+
+	// Create admin in the database
+	admin := svc.Admin{
+		Username:  "admin",
+		Password:  string(hashedPass),
+		CreatedAt: time.Now().Unix(),
+	}
+
+	if err := db.Create(&admin).Error; err != nil {
+		log.Printf("Error creating default admin: %v", err)
+		return
+	}
+
+	log.Println("Default admin created successfully")
 }
